img upload bug fix delete modal title

--- a/admin/src/main/resources/templates/product/list.html
+++ b/admin/src/main/resources/templates/product/list.html
@@ -15,7 +15,7 @@
             <select ng-model="opt.state">
                 <option value="down">已下架</option>
                 <option value="up">已上架</option>
-                <option value="examine">审核中</option>
+                <option value="examine">待审核</option>
                 <option value="not">未通过</option>
             </select>
         </div>
