--- a/web/src/main/resources/templates/user/provider/detail.html
+++ b/web/src/main/resources/templates/user/provider/detail.html
@@ -69,14 +69,14 @@
 								<h3 class="cate-hd">注册信息</h3>
 									<div class="clearfix">
 										<div class="fl">											
-											<div class="form-group">
+											<div class="form-group readonly-group">
 												<div class="fl">
 												<label><i>*</i>注册邮箱</label>
 												<input type="text" th:field="*{email}" readonly="readonly"/>
 												<div class="readonly"></div>
 												</div>
 											</div>
-											<div class="form-group">
+											<div class="form-group readonly-group">
 												<div class="fl">
 												<label><i>*</i>注册用户名</label>
 												<input type="text" th:field="*{name}" readonly="readonly"/>
@@ -85,7 +85,7 @@
 											</div>
 										</div>
 										<div class="fr">
-											<div class="form-group">
+											<div class="form-group readonly-group">
 												<div class="fl">
 												<label><i>*</i>手机号</label>
 												<input type="text" th:field="*{phone}" readonly="readonly"/>	
@@ -175,7 +175,7 @@
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 								<div class="clearfix">
 									<div class="fr">									
-										<div class="form-group">
+										<div class="form-group readonly-group">
 											<div class="fl">
 											<label>企业名称（英文）</label>
 											<input type="text" th:field="*{companyNameEnglish}" readonly="readonly"/>	
@@ -266,7 +266,7 @@
 										</div>					
 									</div>
 									<div class="fl">
-										<div class="form-group">
+										<div class="form-group readonly-group">
 											<label><i>*</i>企业名称（中文）</label>
 											<input type="text" th:field="*{companyNameChina}" readonly="readonly"/>	
 											<div class="readonly"></div>
