--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -977,6 +977,7 @@ table.save-table span.one-sort{
 .mainpanel table td div.fl{
 	max-width: 150px;
 	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .mainpanel table td div.fr{
 	padding-right: 30px;
@@ -1831,9 +1832,6 @@ button.default{
 }
 .files.files-res input[type=file]{
 	left:-4%;
-}
-.push-good .form-group i.error{
-    margin-left: 165px;
 }
 .push-good .form-group i.error.error-abs{
 	top:40%;
