--- a/web/src/main/resources/templates/user/common/collection.html
+++ b/web/src/main/resources/templates/user/common/collection.html
@@ -70,7 +70,7 @@
 											<label>参考报价</label>
 											<span> <b class="red ft14">￥<i th:text="${prefer.product.price}"></i></b> </span>
 										</div>
-										<div class="pic-row tit" th:text="${prefer.product.name}">
+										<div class="pic-row tit" th:text="${prefer.product.name}" style="max-width: 200px;text-overflow: ellipsis;overflow: hidden;">
 											GenePix 4100 A生物芯片扫描仪
 										</div>
 										<div class="pic-row">
