--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -2,7 +2,10 @@
 	<div class="head-box clearfix">
 		<script type="text/javascript" th:src="@{/js/script.js}"></script>
 		<script src="/js/searchForm.js"></script>
-		<a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
+		<a href="/" class="logo">
+			<img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/>
+			<span class="logo-hd">你的协同采购平台</span>
+		</a>
 		<div class="head-search">
 			<form id="searchForm" action="/products/_search">
 				<span class="searched">商品</span>
