--- a/admin/src/main/resources/templates/advertisement/advertisement.html
+++ b/admin/src/main/resources/templates/advertisement/advertisement.html
@@ -32,7 +32,7 @@
                 <td>{{item.updatedTime|date:'yyyy-MM-dd HH:mm:ss'}}</td>
                 <td>
                     <a class="btn btn-primary btn-sm" ng-click="updateState(item)">{{item.state|reverseActiveFilter}}</a>
-                    <a class="btn btn-primary btn-sm" ng-click="view(item)">修改</a>
+                    <a class="btn btn-default btn-sm" ng-click="view(item)">修改</a>
                 </td>
             </tr>
         </tbody>
