--- a/admin/src/main/resources/templates/category/category.html
+++ b/admin/src/main/resources/templates/category/category.html
@@ -26,7 +26,7 @@
                         <button type="button" class="btn btn-primary btn-sm" ng-click="edit(item)">
                            		 修改
                         </button>
-                        <button type="button" class="btn btn-primary btn-sm" ng-click="delete(item)">
+                        <button type="button" class="btn btn-default btn-sm" ng-click="delete(item)">
                            		{{item.activate|reverseActiveFilter}}
                         </button>
                     </td>
