--- a/admin/src/main/resources/templates/subject/subjects.html
+++ b/admin/src/main/resources/templates/subject/subjects.html
@@ -24,7 +24,7 @@
 				<td>{{item.active|activeFilter}}</td>
 				<td>{{item.updatedTime|date:'yyyy-MM-dd HH:mm:ss'}}</td>
 				<td>
-				<button type="button" class="btn btn-primary btn-sm" ng-click="updateState(item)">
+				<button type="button" class="btn btn-default btn-sm" ng-click="updateState(item)">
 					{{item.active|reverseActiveFilter}}
 				</button>
 				<a class="btn btn-primary btn-sm" href="#/subjectDetail/{{item.id}}">修改</a>
