--- a/web/src/main/resources/templates/information/information.html
+++ b/web/src/main/resources/templates/information/information.html
@@ -35,7 +35,7 @@
 		</div>	
 		<div class="mainwrapper clearfix">
 			<div class="news-dtl-wrap">
-				<h3 class="ft16 gray-deeply" th:text="${information.title}">中国首个治疗尿急尿频的透皮贴剂即将面世</h3>
+				<h3 class="ft16 gray-deeply center" th:text="${information.title}">中国首个治疗尿急尿频的透皮贴剂即将面世</h3>
 				<div class="dtl-tag gray-hd">
 					<span>发布于 <i th:text="${#dates.format(information.createdTime, 'yyyy-MM-dd HH-mm-ss')}"></i> </span>
 					<span>浏览<i th:text="${information.viewCount}">1212</i>次</span>	
