--- a/web/src/main/resources/templates/user/common/cart.html
+++ b/web/src/main/resources/templates/user/common/cart.html
@@ -61,7 +61,7 @@
 										<div class="fl" th:text="${cart.name}" >
 										</div></a>
 										<div class="fr">
-											<div>
+											<div class="brand-bd">
 												<label>品牌：</label>
 												<span th:text="${cart.brandName}"></span>
 											</div>
