--- a/web/src/main/resources/templates/user/common/createBuy.html
+++ b/web/src/main/resources/templates/user/common/createBuy.html
@@ -100,8 +100,10 @@
 									<i class="error" th:if="${#fields.hasErrors('arrivalTime')}" th:errors="*{arrivalTime}">必填</i>
 								</div>
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-								<button class="btn green mauto">生成完毕</button>
-								<a href="/user/carts"><button class="btn green mauto" type="button">取消</button></a>
+								<div class="center">
+									<button class="btn green mauto">生成完毕</button>
+									<a href="/user/carts"><button class="btn default mauto" type="button">取消</button></a>
+								</div>
 							</form>
 						</div>
 					</div>
