--- a/web/src/main/resources/templates/user/common/detail.html
+++ b/web/src/main/resources/templates/user/common/detail.html
@@ -44,20 +44,28 @@
 						<div class="tab-panel form-control">
 							<form th:object="${user}" th:method="put">
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-								<div class="form-group">
+								<div class="form-group readonly-group">
 									<div class="fl">
-										<label>邮箱</label> <input type="text" th:field="*{email}" readonly="readonly"/>
+										<label>邮箱</label> 
+										<input type="text" th:field="*{email}" readonly="readonly"/>
+										<div class="readonly left124"></div>
 									</div>
-									<div class="fl">
-										<label>用户名</label> <input type="text" th:field="*{name}"  readonly="readonly"/>
+									<div class="fl readonly-group">
+										<label>用户名</label> 
+										<input type="text" th:field="*{name}"  readonly="readonly"/>
+										<div class="readonly left124"></div>
 									</div>
 								</div>
-								<div class="form-group">
+								<div class="form-group readonly-group">
 									<div class="fl">
-										<label>真实姓名</label> <input type="text" th:field="*{realName}"  readonly="readonly"/>
+										<label>真实姓名</label> 
+										<input type="text" th:field="*{realName}"  readonly="readonly"/>
+										<div class="readonly left124"></div>
 									</div>
-									<div class="fl">
-										<label>手机号</label> <input type="text" th:field="*{phone}"  readonly="readonly"/>
+									<div class="fl readonly-group">
+										<label>手机号</label>
+										<input type="text" th:field="*{phone}"  readonly="readonly"/>
+										<div class="readonly left124"></div>
 									</div>
 								</div>
 								<div class="form-group">
