--- a/web/src/main/resources/templates/user/common/modifyBuy.html
+++ b/web/src/main/resources/templates/user/common/modifyBuy.html
@@ -56,12 +56,12 @@
 									<label>申请人</label> <input type="text" th:field="*{user.realName}" disabled="disabled" style="width: 233px;"/>
 								</div>
 								<div class="form-group">
-									<label>经费类别</label><input type="text" class="w635" th:field="*{fundCategory}"/>
-									<i class="error" th:if="${#fields.hasErrors('fundCategory')}" th:errors="*{fundCategory}">必填</i>
+									<label><i>*</i>经费类别</label><input type="text" class="w635" th:field="*{fundCategory}"/>
+									<i class="error ml115" th:if="${#fields.hasErrors('fundCategory')}" th:errors="*{fundCategory}">必填</i>
 								</div>
 								<div class="form-group">
-									<label>项目名称</label><input type="text" class="w635" th:field="*{name}" />
-									<i class="error" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">必填</i>
+									<label><i>*</i>项目名称</label><input type="text" class="w635" th:field="*{name}" />
+									<i class="error ml115" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">必填</i>
 								</div>
 								<table width="90%" class="mauto">
 									<thead>
@@ -93,20 +93,22 @@
 									</div>
 								</div>
 								<div class="form-group">
-									<label>申请理由</label>
+									<label><i>*</i>申请理由</label>
 									<textarea class="w635" rows="5" th:field="*{reason}"></textarea>
 								</div>
 								<div class="form-group">
-									<label>期望到货日期</label> 
+									<label><i>*</i>期望到货日期</label> 
 									<input th:if="${buy.arrivalTime!=null}" class="form-control datepicker" th:value="${#dates.format(buy.arrivalTime, 'yyyy-MM-dd')}" id="arrivalTime" name="arrivalTime" type="text" />
 									<input th:unless="${buy.arrivalTime!=null}" class="form-control datepicker" id="arrivalTime" name="arrivalTime" type="text" />
 									<i class="error" th:if="${#fields.hasErrors('arrivalTime')}" th:errors="*{arrivalTime}">必填</i>
 									</div>
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-								<button class="btn green mauto">保存</button>
-								<a href="/user/buyRecords">
-									<button class="btn default" type="button">返回</button>
-								</a>
+								<div class="center">
+									<button class="btn green mauto">保存</button>
+									<a href="/user/buyRecords">
+										<button class="btn default" type="button">返回</button>
+									</a>									
+								</div>
 							</form>
 						</div>
 					</div>
