--- a/web/src/main/resources/templates/user/common/detail.html
+++ b/web/src/main/resources/templates/user/common/detail.html
@@ -71,8 +71,8 @@
 								<div class="form-group">
 									<div class="fl" style="width: 355px;">
 										<label><i>*</i>性别</label>
-										<input type="radio" th:field="*{sex}" value="MALE" style="width: 65px;"/>男
-										<input type="radio" th:field="*{sex}" value="FEMALE" style="width: 65px;"/>女
+										<input type="radio" th:field="*{sex}" value="MALE"/>男
+										<input type="radio" th:field="*{sex}" value="FEMALEs"/>女
 										<i class="error" th:if="${#fields.hasErrors('sex')}" th:errors="*{sex}">必填</i>
 									</div>
 									<div class="fl">
